title is modified in json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://OscarAcevedo18.github.io/challengue-data-base.git",
+  "homepage":"https://OscarAcevedo18.github.io/challenge-data-base.git",
   "name": "base-colaboradores",
   "version": "0.1.0",
   "private": true,
