--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://OscarAcevedo18.github.io/challenge-data-base",
+  "homepage":"https://OscarAcevedo18.github.io/challenge-data-base/",
   "name": "base-colaboradores",
   "version": "0.1.0",
   "private": true,
